remove the prevention of scrollbars from MissionMap.css

--- a/src/components/screens/MissionMap/MissionMap.css
+++ b/src/components/screens/MissionMap/MissionMap.css
@@ -469,9 +469,9 @@
 }
 
 /* Prevent any scrollbars */
-body {
+/* body {
   overflow: hidden;
-}
+} */
 
 .mission-map * {
   box-sizing: border-box;
